--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,140 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background-color: #f4f4f4;
+  background-color: #180b0b;
 }
+
 .boton-jugada {
   background-color: #3498db;
   color: #fff;
@@ -10,7 +142,83 @@ body {
   font-size: 16px;
   cursor: pointer;
 }
+
 #resultados {
   font-size: 20px;
   margin: 20px 0;
+}
+
+/*mis css*/
+body {
+  padding: 50px;
+  background-color: beige;
+}
+
+.boton-jugada {
+  border-radius: 5px;
+  margin: 10px;
+  width: 150px;
+  height: 70px;
+  color: white;
+  font-size: 20px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#resultados {
+  animation: resultado 4s linear;
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: red;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  border-radius: 10px;
+}
+
+.container p {
+  line-height: 1.8;
+  font-weight: bold;
+  color: green;
+  font-size: 30px;
+  text-shadow: 0 2px 2px black;
+}
+
+@keyframes resultado {
+  0% {
+    background-color: chartreuse;
+    box-shadow: 0 0 0;
+    transform: scale(1);
+  }
+
+  25% {
+    background-color: green;
+    box-shadow: 0 4px 4px rgb(10, 10, 10);
+    transform: scale(1.4);
+  }
+
+  50% {
+    background-color: red;
+    box-shadow: 0 8px 8px rgb(0, 0, 0);
+    transform: scale(1.8);
+  }
+
+  75% {
+    background-color: aqua;
+    box-shadow: 10px 10px 10px rgb(8, 8, 8);
+    transform: scale(2);
+  }
+
+  100% {
+    background-color: blueviolet;
+    transform: scale(1);
+  }
 }
